# ghost-commander

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: SCOPE.md
examples/: run_demo.py
src/ghost_commander/: __init__.py  cli.py
src/ghost_commander/app/: __init__.py  dashboard.py
src/ghost_commander/coordination/: __init__.py  _hungarian.py  auction.py  base.py  global_opt.py  greedy.py  optimal.py  triage.py
src/ghost_commander/core/: __init__.py  clock.py  events.py  rng.py
src/ghost_commander/domain/: __init__.py  agent.py  task.py  world.py
src/ghost_commander/sim/: __init__.py  comparison.py  engine.py  failures.py  metrics.py  recorder.py  scenario.py
tests/: test_coordination.py  test_determinism.py  test_engine.py  test_scope_boundary.py
tools/: make_demo_gif.py
